--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1JyDahKwe1wPXoFeNMQJ34BCzzm6boXI&libraries=places"></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?key={GOOGLE_PLACES_API_KEY_HERE}&libraries=places"></script> 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
